force-app/main/default/objects/ESPN_Sync_Event__e/ESPN_Sync_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event for real-time ESPN sync with retry logic</description>
    <label>ESPN Sync Event</label>
    <pluralLabel>ESPN Sync Events</pluralLabel>
</CustomObject>