force-app/main/default/objects/ESPN_Sync_Event__e/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>Salesforce object type: Account, Contact, Match__c, Award__c</description>
    <label>Entity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>