force-app/main/default/objects/ESPN_Sync_Event__e/fields/ESPN_ID__c.field-meta.xml
<CustomField>
    <fullName>ESPN_ID__c</fullName>
    <description>ESPN entity ID</description>
    <label>ESPN ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>