force-app/main/default/objects/ESPN_Sync_Event__e/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <description>Max retries allowed (default 3)</description>
    <label>Max Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>