force-app/main/default/objects/ESPN_Sync_Event__e/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority for queue ordering (1=highest, 5=lowest)</description>
    <label>Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>