force-app/main/default/objects/ESPN_Sync_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Salesforce record ID</description>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>