force-app/main/default/objects/ESPN_Sync_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Event status: Pending, Processing, Success, Failed</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>