force-app/main/default/objects/ESPN_Sync_Event__e/fields/Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>Sync_Type__c</fullName>
    <description>Type of sync: Team, Roster, Match, LiveScore, Award</description>
    <label>Sync Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>